# rcv

./: .gitignore  README.md  build_scripts  pyproject.toml
build_characters/: build_ninja.py  build_samurai.py
libs/: attribute.py  common.py  file.py  group.py  maths.py  ng.py  skin.py  transform.py
libs/control/: ctrl.py  draw.py
libs/control/shapes/: arrow_4way.json  bean_4_all.json  circle.json  circle_halfed_double.json  curve1.json  gear_2D.json  halfcircle.json  halfcircle2.json  middle_circle.json  naruto.json  outter_circle.json  sphere.json  sphere2.json  sphere3.json  square.json  test_curve.json  wiggly.json  wiggly2.json
maya_scripts/: build_ninja.py
